# hsedit

./: .gitignore  LICENSE  README.md  TODO.md  hsedit.cabal  stack.yaml
app/: Main.hs
src/: EditRope.hs  TestHelper.hs  Types.hs
test/: Criterion.hs  Spec.hs
