name:                hsedit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/clojj/hsedit#readme
license:             BSD3
license-file:        LICENSE
author:              clojj
maintainer:          na
copyright:           value
category:            editor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     EditRope, TestHelper, Types
  build-depends:       base >= 4.7 && <= 5
                     , brick
                     , yi-rope
                     , ghc
                     , microlens
                     , vty
                     , deepseq
                     , text
  default-language:    Haskell2010

executable hsedit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hsedit
                     , brick
                     , yi-rope
                     , fold-debounce
                     , ghc
                     , ghc-paths
                     , microlens
                     , microlens-th
                     , microlens-mtl
                     , vty
                     , text
  default-language:    Haskell2010

-- run with: stack test hsedit:hsedit-test
test-suite hsedit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsedit
                     , text
                     , brick
                     , vty
                     , ghc
                     , hspec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- run with: stack test hsedit:hsedit-criterion
test-suite hsedit-criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Criterion.hs
  build-depends:       base
                     , hsedit
                     , text
                     , brick
                     , vty
                     , yi-rope
                     , ghc
                     , criterion
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clojj/hsedit
